# Practicas_Code

./: .autocp  .gitignore  CMakeLists.txt  g_concert_tikets  plantilla.cpp
Ayudantias/: for_example.cpp  password.cpp
Ejercicio1/: five.cpp  one.cpp  three.cpp
Ejercicio3/: Ej1.cpp  Ej2.cpp  Ej3.cpp  Ej5.cpp  Presentation.txt
Ejercicio_loops/: HarryPortter.cpp
Examenes_Pasados/: Exercise_1.cpp  Exercise_1_par_2.cpp  Exercise_2.cpp  Exercise_2_par_2.cpp
PracticaCLase/: Prime_numbers.cpp
Practica_Clases/: Divisivilidad.cpp  Ejemplo1.cpp  Horarios.cpp  Prueba_datos_basura.cpp  Un_ejercicio_muy_facil.cpp  Vaca_en_los_establos.cpp  ejercicio2.cpp  ejercicio3.cpp  ejercicio4.cpp  ejercicios.cpp
Practice_condicionales/: Ej2.cpp  Ej4.cpp
Practices_separated/: Pino.cpp
SlidingWindows/: max_sum_in_vector.cpp
Vjudge/: CME.cpp  Cake_from_Tolya.cpp  Fast_Expontaition.cpp  Square-Free_Division_Easy_Version.cpp  T-primes.cpp
creadores_digitales_senior_modulo_4/: g_concert_tikets.cpp  h_sequence_query.cpp
intro_progra_exercises1/: four.cpp  ocho.cpp  seven.cpp  six.cpp  two.cpp
loops_more_practice/: FizzBuzz.cpp  HarryPortter.cpp
practica_completo/: practica_completa.cpp
practico_loops_2_2/: Intentofallido.cpp  ejercicio_1.cpp  ejercicio_10.cpp  ejercicio_11.cpp  ejercicio_12.cpp  ejercicio_13.cpp  ejercicio_14.cpp  ejercicio_15.cpp  ejercicio_16.cpp  ejercicio_17.cpp  ejercicio_18.cpp  ejercicio_2.cpp  ejercicio_3.cpp  ejercicio_4.cpp  ejercicio_5.cpp  ejercicio_6.cpp  ejercicio_7.cpp  ejercicio_8.cpp  ejercicio_9.cpp
(+26 files in other folders)
